update with preview feature